--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -29,10 +29,7 @@
           </video>
         </section>
       </main>
-    
-      <footer>
-        <p>&copy; 2024 TechCon</p>
-      </footer>
+      <footer>&copy; 2024 TechCon</footer>
 
 </body>
 
