--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -21,16 +21,20 @@
     </header>
     <main>
         <section>
-          <p>Join us for TechCon 2024, a premier conference bringing together tech enthusiasts, developers, and industry leaders. Get ready for inspiring talks, workshops, and networking opportunities – all designed to ignite your passion for technology.</p>
-    
-          <video width="800" controls>
-            <source src="https://youtu.be/H5_7LfuQfEg?si=CLq-jOMmPqgucDpo" type="video/mp4">
-            Your browser does not support the video tag. Please update your browser.
-          </video>
+            <p>Join us for TechCon 2024, a premier conference bringing together tech enthusiasts, developers, and
+                industry leaders. Get ready for inspiring talks, workshops, and networking opportunities all designed
+                to ignite your passion for technology.</p>
+
+            <video width="800" controls>
+                <source src="https://youtu.be/H5_7LfuQfEg?si=CLq-jOMmPqgucDpo" type="video/mp4">
+                Your browser does not support the video tag. Please update your browser.
+            </video>
         </section>
-        <footer>&copy; 2024 TechCon</footer>
-      </main>
-      
+    </main>
+
+    <footer>
+        <p>&copy;TechCon 2024</p>
+    </footer>
 
 </body>
 
