--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -31,7 +31,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;TechCon 2024</p>
+        &copy;TechCon 2024
     </footer>
 
 </body>
