--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -30,6 +30,9 @@
             </video>
         </section>
     </main>
+    <footer>
+        <p>&copy;TechCon 2024</p>
+    </footer>
 
 </body>
 
