--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -31,7 +31,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;TechCon 2024</p>
+        <p>Copyright © 2024 TechCon, All rights reserved.</p>
     </footer>
 
 </body>
