--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -22,8 +22,8 @@
     </header>
 
     <main>
+    <table>
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
-    <table bgcolor="lime">
       <thead>
         <tr>
           <th scope="col">Time</th>
@@ -63,7 +63,7 @@
 
     </main>
     <footer>
-        <p>Copyright © 2024 TechCon, All rights reserved.</p>
+        <p> Copyright © 2024 TechCon, All rights reserved.</p>
     </footer>
 </body>
 </html>
