--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -24,19 +24,19 @@
     <main>
          <form>
             <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" required><br>
+            <input type="text"><br>
 
             <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email" required><br>
+            <input type="email"><br>
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br>
+            <input type="password"><br>
 
             <label for="confirm_password">Confirm Password:</label>
-            <input type="password" id="confirm_password" name="confirm_password" required><br>
+            <input type="password"><br>
 
             <input type="checkbox" id="terms" name="terms" required>
-            <label for="terms">I agree to the TechCon 2024 Terms and Conditions (link to terms)</label><br>
+            <label for="terms">I agree to the TechCon 2024 Terms and Conditions</label><br>
 
             <button type="submit">Register Now</button>
         </form>
