--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -19,24 +19,24 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        
+
     </header>
     <main>
-         <form>
+        <form>
             <label for="name">Full Name:</label>
-            <input type="text"><br>
-
+            <input type="text">
+            
             <label for="email">Email Address:</label>
-            <input type="email"><br>
+            <input type="email">
 
             <label for="password">Password:</label>
-            <input type="password"><br>
+            <input type="password">
 
             <label for="confirm_password">Confirm Password:</label>
-            <input type="password"><br>
+            <input type="password">
 
             <input type="checkbox" id="terms" name="terms" required>
-            <label for="terms">I agree to the TechCon 2024 Terms and Conditions</label><br>
+            <label for="terms">I agree to the TechCon 2024 Terms and Conditions</label>
 
             <button type="submit">Register Now</button>
         </form>
