--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register for TechCon 2024</title>
 </head>
 
 <body>
@@ -19,13 +19,14 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-
     </header>
     <main>
         <form>
+            <p>Fill out the form below to register for TechCon 2024.</p>
+            
             <label for="name">Full Name:</label>
             <input type="text">
-            
+
             <label for="email">Email Address:</label>
             <input type="email">
 
