--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -31,33 +31,34 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr bgcolor="lightgrey">
                     <td>10:00 AM - 11:00 AM</td>
                     <td>Keynote: The Future of Technology</td>
                     <td>Ahmad Ababneh</td>
                 </tr>
-                <tr>
+                <tr bgcolor="lightgrey">
                     <td>11:15 AM - 12:15 PM</td>
                     <td>Breakout Session 1: Building Scalable Web Applications</td>
                     <td>John Cloudarchitect</td>
                 </tr>
-                <tr >
+                <tr bgcolor="lightgrey">
                     <td>12:30 PM - 1:30 PM</td>
                     <td>Lunch Break</td>
                     <td>-</td>
                 </tr>
-                <tr>
+                <tr bgcolor="lightgrey">
                     <td>1:30 PM - 2:30 PM</td>
                     <td>Panel Discussion: AI in Practice</td>
                     <td>Dr. Sophia Robotics, Prof. Mark Brainiac, Ms. Jane Innovation</td>
                 </tr>
-                <tr>
+                <tr bgcolor="lightgrey">
                     <td>2:45 PM - 3:45 PM</td>
                     <td>Workshop: Introduction to Machine Learning</td>
                     <td>Ms. Sarah Coder</td>
                 </tr>
             </tbody>
         </table>
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
     </main>
     <footer>
         <p>Copyright © 2024 TechCon, All rights reserved.</p>
