--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -21,23 +21,22 @@
         </nav>
     </header>
     <main>
-        <form>
+        <form action="submit" method="post">
 
-            <label for="name">Full Name:</label>
-            <input type="text">
+            <label for="fullname">Full Name</label>
+            <input type="text" id="fullname" name="fullname" required>
 
-            <label for="email">Email Address:</label>
-            <input type="email">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
 
-            <label for="password">Password:</label>
-            <input type="password">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
 
-            <label for="confirm_password">Confirm Password:</label>
-            <input type="password">
-
+            <label for="confirm_password">Confirm Password</label>
+            <input type="password" id="confirm_password" name="confirm_password required">
+            
             <input type="checkbox" id="terms" name="terms" required>
-            <label for="terms">I agree to the TechCon 2024 Terms and Conditions</label>
-
+            <label for="terms">I agree to the Terms and Conditions</label>
             <button type="submit">Register Now</button>
         </form>
     </main>
