--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -61,8 +61,7 @@
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
     </main>
     <footer>
-        <p>Copyright © 2024 TechCon, All rights reserved.</p>
+        <p>copyright © 2024 TechCon, All rights reserved.</p>
     </footer>
 </body>
-
 </html>
